--- a/Module5_string_operations.ipynb
+++ b/Module5_string_operations.ipynb
@@ -56,7 +56,7 @@
         "# APEX Faculty Training, Module 5: String Operations\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Jan 22, 2022\n",
+        "Last updated: Feb 1, 2022\n",
         "\n",
         "**Learning outcomes**  \n",
         "1. To continue learning how to perform operations with strings"
@@ -384,10 +384,11 @@
         "</table>  \n",
         "\n",
         "\n",
-        "It's also important to remember that a string's characters include not only letters, but also numbers, punctuation, symbols, and spaces. Thus, the exclamation point in the above example counts as a character and can be found at index 2.\n",
+        "It's also important to remember that a string's characters include not only letters, but also numbers, punctuation, symbols, and spaces. Thus, the exclamation point in the above example counts as a character and can be found at index 5.\n",
         "\n",
         "\n",
         "---\n",
+        "\n",
         "\n",
         "Back to our original example of wanting to select the first letter in the name `Trinh`. We do this using Python's indexing operator, or `[]`. the general syntax for using this operator is as follows\n",
         "\n",
@@ -499,7 +500,7 @@
       },
       "source": [
         "## Congrats, you're done! \n",
-        "In this module, we've finished our discussion of strings. If you'd like more practice with string operations, click on this link to be taken to a Colab notebook with more practice exercises. \n",
+        "In this module, we've finished our discussion of strings. If you'd like more practice with string operations, try out the [bonus exercises](https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module5_string_operations_bonus_exercises.ipynb) for this module. \n",
         "\n",
         "Otherwise, continue to the next module to learn about two new data types: lists and tuples!"
       ]
