--- a/Module6_lists_and_tuples.ipynb
+++ b/Module6_lists_and_tuples.ipynb
@@ -57,7 +57,7 @@
         "\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Jan 28, 2022  \n",
+        "Last updated: Feb 1, 2022  \n",
         "\n",
         "**Learning outcomes**  \n",
         "To learn about and gain practice with:\n",
@@ -103,7 +103,7 @@
         "int_list = [1, 2, 3, 4]\n",
         "float_list = [1.41, 9.63, 2.72, 3.14, 8.99]\n",
         "bool_list = [True, True, False]\n",
-        "str_list = ['alpha', 'beta', 'gamma', 'delta', 'omicron']\n",
+        "str_list = ['alpha', 'beta', 'gamma', 'delta', 'epsilon']\n",
         "mix_list = [1, 1.61, False, 'delta']\n",
         "```"
       ]
@@ -118,7 +118,7 @@
         "In the cell below:\n",
         "* Create a list called `names` that contains several strings: Your first name, a family member's name, and an actor's first name. Note: given that these names are strings, you'll need to put quote marks around each individual name.\n",
         "* Create a list called `odd_nums` that contains several integers, specifically, odd numbers between 1-10.\n",
-        "* Print each list"
+        "* Print each list."
       ]
     },
     {
@@ -145,7 +145,7 @@
       },
       "source": [
         "## 3. Operations with lists\n",
-        "Similar to how Python performs different operations on number types and strings, there are also operations that are specific to lists. However, many operations that you've already learned apply to lists, as well."
+        "Similar to how Python performs different operations on number types and strings, there are also operations that are specific to lists. However, many operations that you've already learned apply to lists as well."
       ]
     },
     {
@@ -282,7 +282,7 @@
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 7</font>  \n",
-        "Now you try using the `min()` and `max()` functions! In the cell below\n",
+        "Now you try using the `min()` and `max()` functions! In the cell below:\n",
         "* Determine which of the pet types in `all_pets` appears latest in the alphabet. Be sure to print the result.\n",
         "* Determine which of the numbers in `odd_nums` has the lowest value. Be sure to print the result."
       ],
@@ -364,7 +364,7 @@
         "\n",
         "For example, if we have the following list:\n",
         "\n",
-        "`str_list = ['alpha', 'beta', 'gamma', 'delta', 'omicron']`\n",
+        "`str_list = ['alpha', 'beta', 'gamma', 'delta', 'epsilon']`\n",
         "\n",
         "We could then check whether delta is in the list as follows:\n",
         "\n",
@@ -505,10 +505,10 @@
         "id": "lcRUYszCb1WN"
       },
       "source": [
-        "# create the list\n",
+        "# create and print the list\n",
         "\n",
         "\n",
-        "# modify the list\n"
+        "# modify and print the list\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -520,7 +520,7 @@
       },
       "source": [
         "<font color='red'>Exercise 15</font>  \n",
-        "What happens if we try to do something similar to a string, such that we replace one character with another? In the cell below, this is exactly what we attempt to do. As you'll see, this attempt causes a Type Error."
+        "What happens if we try to do something similar to a string, such that we replace one character with another? In the cell below, this is exactly what we attempt to do. As you'll see, this attempt causes a TypeError."
       ]
     },
     {
@@ -569,7 +569,7 @@
         "<font color='red'>Exercise 16</font>  \n",
         "To gain practice with which operations do and don't work with tuples, start by creating `pres_tup` with the last names of the three most recent presidents. Then...\n",
         "* Determine the max value of the tuple, printing the result\n",
-        "* Make a new list called `pres_double` that includes two copies of `pres_tup`,and then print the result\n",
+        "* Make a new list called `pres_double` that includes two copies of `pres_tup`, and then print the result\n",
         "* Attempt to replace one of the names in `pres_tup` with your own last name. Do you understand the error message?"
       ]
     },
