Change title to include "bonus exercises"

--- a/Module2_datatypes_bonus_exercises.ipynb
+++ b/Module2_datatypes_bonus_exercises.ipynb
@@ -63,10 +63,10 @@
         "id": "U2VoRlVpDcqd"
       },
       "source": [
-        "# APEX Faculty Training, Module 2: Datatypes\n",
+        "# APEX Faculty Training, Bonus Exercises for Module 2: Datatypes\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Dec 14, 2021 "
+        "Last updated: Feb 2, 2022 "
       ]
     },
     {
