--- a/Module5_string_operations_bonus_exercises.ipynb
+++ b/Module5_string_operations_bonus_exercises.ipynb
@@ -53,10 +53,10 @@
         "id": "L3vFn9_lzweJ"
       },
       "source": [
-        "# APEX Faculty Training, Bonus Exercises for String Operations (Module 5)\n",
+        "# APEX Faculty Training, Bonus Exercises for Module 5: String Operations\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Jan 24, 2022 "
+        "Last updated: Feb 2, 2022 "
       ]
     },
     {
@@ -112,152 +112,57 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kb_sY0-czwfK",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "5413eb9c-e50f-45ff-f992-33bf4efe1025"
+        "id": "kb_sY0-czwfK"
       },
       "source": [
         "# 'cow pig hen'\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'ant bat cod'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 27
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "x59n8Ub3zwfM",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "f2201a35-b0a7-4e10-8097-0e4da06df421"
+        "id": "x59n8Ub3zwfM"
       },
       "source": [
         "# 'cow cow cow cow cow cow cow cow cow cow '\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'ant ant ant ant ant ant ant ant ant ant '"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 28
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3pQtz5-DzwfO",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "b75a7e33-a5ba-456e-b028-9447759671b0"
+        "id": "3pQtz5-DzwfO"
       },
       "source": [
         "# 'cow pig pig hen hen hen' # This one's more tricky--notice, there's no space at the end\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'ant bat bat cod cod cod'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "p5O2ndpTzwfQ",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "278316f5-b9e3-4f8f-e30e-a8808c07997e"
+        "id": "p5O2ndpTzwfQ"
       },
       "source": [
         "# 'cow pig cow pig cow pig cow pig cow pig cow pig cow pig '\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'ant bat ant bat ant bat ant bat ant bat ant bat ant bat '"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 30
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "btqjo1NNzwfT",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "13b7a03a-fcd4-4da8-e343-a6d680f357ae"
+        "id": "btqjo1NNzwfT"
       },
       "source": [
         "# 'pigpighen pigpighen pigpighen pigpighen pigpighen '\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'batbatcod batbatcod batbatcod batbatcod batbatcod '"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 32
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
