Remove reference to assignment operator

--- a/Module2_datatypes.ipynb
+++ b/Module2_datatypes.ipynb
@@ -66,7 +66,7 @@
         "# APEX Faculty Training, Module 2: Datatypes\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Jan 31, 2022 \n",
+        "Last updated: Feb 3, 2022 \n",
         "\n",
         "**Learning Outcomes**:  \n",
         "1. To learn about different different Python data types, including integers and floats\n",
@@ -454,7 +454,7 @@
       },
       "source": [
         "<font color='red'>Exercise 10</font>  \n",
-        "Write the Boolean expression for 3 squared plus 4 is equivalent to 25 minus 12. Remember the difference between the assignment operator and the equivalence operator? Feel free to use parentheses to help clarify your expressions."
+        "Write the Boolean expression for 3 squared plus 4 is equivalent to 25 minus 12."
       ]
     },
     {
