Add example csv file for use with dataframes exercises

--- a/Module8_pandas.ipynb
+++ b/Module8_pandas.ipynb
@@ -53,7 +53,7 @@
         "id": "svAPrOFekdFH"
       },
       "source": [
-        "# APEX Faculty Training, Module 8: Pandas\n",
+        "# APEX Faculty Training, Module 8: Pandas Part 1\n",
         "\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
@@ -105,7 +105,46 @@
       },
       "source": [
         "## 3. Pandas Dataframes\n",
-        "Dataframes are Python data types, just as integers, floats, strings, and lists are. Dataframes have special properties and methods that can be applied to them. <font color='red'>Insert example of dataframe here</font>   \n",
+        "Dataframes are Python data types, just as integers, floats, strings, and lists are. Dataframes have special properties and methods that can be applied to them. A Dataframe, when displayed, looks much like a spreadsheet that you're used to seeing. Below is an example of what part of a Dataframe would look like.  \n",
+        "\n",
+        "<table>\n",
+        "<tr>\n",
+        "<th></th>\n",
+        "<th>state</th>\n",
+        "<th>totalPop</th>\n",
+        "<th>hispPop</th>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>0</td>\n",
+        "<td>Alabama</td>\n",
+        "<td>4779736</td>\n",
+        "<td>185602</td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>1</td>\n",
+        "<td>Alaska</td>\n",
+        "<td>710231</td>\n",
+        "<td>39249</td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>2</td>\n",
+        "<td>Arizona</td>\n",
+        "<td>6392017</td>\n",
+        "<td>1895149</td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>3</td>\n",
+        "<td>Arkansas</td>\n",
+        "<td>2915918</td>\n",
+        "<td>186050</td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>4</td>\n",
+        "<td>California</td>\n",
+        "<td>37253956</td>\n",
+        "<td>14013719</td>\n",
+        "</tr>\n",
+        "</table>\n",
         "\n",
         "### 3a. Creating Dataframes  \n",
         "Typically, dataframes are created by reading in a file. The most common file type used with Pandas is a CSV file, e.g., `my_file.csv`. Excel and Sheets can be exported as CSV files, so if you have an existing dataset, you can save it as a CSV file and read it in with Pandas.  \n",
@@ -126,7 +165,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -141,8 +180,7 @@
         "The filepath can either be a Google Drive path or a URL for files stored on the web. Here <font color='red'>(for now?)</font>, we'll use the latter--no need to connect to Drive. \n",
         "\n",
         "<font color='red'>Exercise 2</font>  \n",
-        "below the `filepath` declaration in the following code cell, read in the filepath as a dataframe called `my_df` using the syntax shown directly above. \n",
-        "<font color='red'>Add example csv file for this exercise</font>"
+        "Below the `filepath` declaration in the following code cell, read in the filepath as a dataframe called `my_df` using the syntax shown directly above. "
       ]
     },
     {
@@ -151,9 +189,9 @@
         "id": "zGuiFay7gr4a"
       },
       "source": [
-        "filepath = \"file path goes here\"\n"
+        "filepath = \"https://raw.githubusercontent.com/valeriecarr/engr120/main/S21/state_pop.csv\""
       ],
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -193,7 +231,7 @@
         "Similaraly, you can use `tail()` to display the last few entries of a dataframe. The default for this method is also 5, and it can also be changed by providing a number in the parentheses.  \n",
         "\n",
         "<font color='red'>Exercise 4</font>  \n",
-        "In the cell below, display the first 10 entries of the `my_df` dataframe. Then, create a new line and display the last 5 entries of the dataframe."
+        "In the cell below, display the first 7 entries of the `my_df` dataframe."
       ]
     },
     {
@@ -204,6 +242,27 @@
       "source": [
         ""
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 5</font>  \n",
+        "Now, create a new line and display the last 3 entries of the dataframe."
+      ],
+      "metadata": {
+        "id": "CTaFKpnBEbtW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "W0sOXPUREsds"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -231,14 +290,14 @@
         "The syntax for the **Label approach** looks much like accessing an element of an array or a dictionary item, where the label is the column name:  \n",
         "`my_df['col_name']`  \n",
         "\n",
-        "<font color='red'>Exercise 4</font>  \n",
-        "Run the cell below to see the column <font color='red'>column name here</font> displayed using the **Attribute** approach."
+        "<font color='red'>Exercise 6</font>  \n",
+        "Run the cell below to see the column `totalPop` displayed using the **Attribute** approach."
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "my_df.col_name"
+        "my_df.totalPop"
       ],
       "metadata": {
         "id": "sPxylw5DgnMK"
@@ -249,8 +308,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<font color='red'>Exercise 5</font>  \n",
-        "Now try displaying the column <font color='red'>column name here</font> in the cell below using the **Label** approach. Refer to the syntax just above!"
+        "<font color='red'>Exercise 7</font>  \n",
+        "Now try displaying the column hispPop in the cell below using the **Label** approach. Refer to the syntax just above!"
       ],
       "metadata": {
         "id": "DDvOcT9wg60p"
