Updated according to Valerie's modifications

--- a/Module8_pandas1.ipynb
+++ b/Module8_pandas1.ipynb
@@ -43,8 +43,8 @@
         "id": "lnXOxVPEkZ5f"
       },
       "source": [
-        "<img src='https://cdn.pixabay.com/photo/2016/08/25/15/30/dictionary-1619740_1280.jpg' width=700>  \n",
-        "Photo by stevepb production from Pixabay"
+        "<img src='https://cdn.pixabay.com/photo/2019/09/08/19/54/panda-4461766_1280.jpg' width=700>  \n",
+        "Photo by qgadrian production from Pixabay"
       ]
     },
     {
@@ -57,10 +57,11 @@
         "\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Jan 30, 2022  \n",
+        "Last updated: Feb 13, 2022  \n",
         "\n",
         "**Learning outcomes**  \n",
-        "<font color='red'>Insert learning outcomes</font>  "
+        "1. Learn to read in spreadsheet data (\"dataframes\") in Python with the Pandas library.\n",
+        "2.  Learn to manipulate the contents of a dataframe with Pandas methods"
       ]
     },
     {
@@ -93,9 +94,11 @@
       },
       "source": [
         "## 2. What is (are?) Pandas?  \n",
-        "Pandas is a Python library that provides tools for working with rows and columns of data. Essentially, it's useful for working with spreadsheet data. In Pandas, we use the term \"dataframe\".  \n",
+        "Pandas is a Python library that provides tools for working with rows and columns of data. In other words, it's useful for working with  data in spreadsheet form. In Pandas, however, we use the term \"dataframe\" rather than spreadsheet.  \n",
         "\n",
-        "Pandas is used to organize, clean, and view data, similar to what you might to in Excel or Sheets. This library is useful because it can easily work with large data sets and it makes it much easier to write code that organizes and cleans your data than doing it by hand."
+        "Pandas is used to organize, clean, and view data, similar to what you might do in Excel or Sheets. This library is useful because it:\n",
+        "* Can easily work with large data sets\n",
+        "* Is much easier to write code that organizes and cleans your data than do these tedious tasks by hand"
       ]
     },
     {
@@ -105,7 +108,7 @@
       },
       "source": [
         "## 3. Pandas Dataframes\n",
-        "Dataframes are Python data types, just as integers, floats, strings, and lists are. Dataframes have special properties and methods that can be applied to them. A Dataframe, when displayed, looks much like a spreadsheet that you're used to seeing. Below is an example of what part of a Dataframe would look like.  \n",
+        "Dataframes are Python data types, just as integers, floats, strings, and lists are. Dataframes have special properties and methods that can be applied to them. As you can see in the example below, a dataframe looks much like a spreadsheet.  \n",
         "\n",
         "<table>\n",
         "<tr>\n",
@@ -147,14 +150,17 @@
         "</table>\n",
         "\n",
         "### 3a. Creating Dataframes  \n",
-        "Typically, dataframes are created by reading in a file. The most common file type used with Pandas is a CSV file, e.g., `my_file.csv`. Excel and Sheets can be exported as CSV files, so if you have an existing dataset, you can save it as a CSV file and read it in with Pandas.  \n",
+        "Typically, dataframes are created by reading in a file. The most common file type used with Pandas is a CSV file, e.g., `my_file.csv`. Files created in Excel and Sheets can be exported as CSV files, so if you have an existing dataset, you can save it as a CSV file and read it in with Pandas.  \n",
         "\n",
         "### 3b. Using Pandas  \n",
-        "A Python library, such as Pandas, has to be imported before its functions can be used. It is best to do this at the top of the program (top of the notebook). To import Pandas, use the keyword `import` followed by the library name, `pandas`. It is also standard to use an abbreviation when importing libraries--for pandas, this abbreviation is `pd`. We perform the import with the following line:  \n",
+        "A Python library, such as Pandas, has to be imported before its functions can be used. It is best to include this import code at the top of a given notebook. \n",
+        "\n",
+        "To import Pandas, use the keyword `import` followed by the library name, `pandas`. It is also standard to use an abbreviation when importing libraries; for pandas, this abbreviation is `pd`. Putting this all together, we can import Pandas with the following line of code:\n",
+        "\n",
         "`import pandas as pd`  \n",
         "\n",
         "<font color='red'>Exercise 1</font>  \n",
-        "Run the code cell below to import the Pandas library to this notebook. You won't see any output, but you must run the cell before the other exercises in order for them to work."
+        "Copy and paste the code above into the cell below, making sure to run the cell. You won't see any output, but this step is necessary to use Pandas functions in subsequent exercises."
       ]
     },
     {
@@ -163,9 +169,9 @@
         "id": "sjOCmnIDfaw8"
       },
       "source": [
-        "import pandas as pd"
+        ""
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -175,12 +181,24 @@
       },
       "source": [
         "## 4. Reading in Files\n",
-        "Pandas has a function `read_csv()` that reads in csv files and converts the content to a dataframe. The generic syntax looks like this:  \n",
+        "How does one open a CSV file in Python? In Excel or Sheets, you would normally click the \"open\" icon and select the file of interest. The process is a bit different with Python, but generally involves the same steps: telling Python that you want to open (or \"read\") a file, and then specifying which file it is that you want to read.\n",
+        "\n",
+        "Pandas has a function `read_csv()` that reads in csv files and converts the content to a dataframe. The generic syntax looks like this:\n",
+        "\n",
         "`my_df = pd.read_csv(filepath)`  \n",
-        "The filepath can either be a Google Drive path or a URL for files stored on the web. Here <font color='red'>(for now?)</font>, we'll use the latter--no need to connect to Drive. \n",
+        "\n",
+        "Breaking down this syntax:\n",
+        "* `my_df` is a generic variable name that represents the dataframe that you're creating. You can, of course, choose any variable name that you like.\n",
+        "* `pd` is the abbreviation for Pandas; essentially, we're saying, \"I want to use a function within the Pandas library\"\n",
+        "* `read_csv()` is the specific function within Pandas that we'll use to read in the CSV file and create the dataframe\n",
+        "* Finally, `filepath` is the location and name of the CSV file in question\n",
+        "\n",
+        "For the purposes of this tutorial, we'll be using a CSV file stored on GitHub, which can be accessed via a URL. Below, you'll see that we created the variable `filepath` and assigned it a string with the desired URL.\n",
+        "\n",
+        "In a future module, we'll teach you how to create your own GitHub account so that you can drop files there and obtain URLs, and we'll also teach you an alternate approach in which you can instead add files to Google Drive. The latter involves a couple extra steps but is nonetheless quite doable.\n",
         "\n",
         "<font color='red'>Exercise 2</font>  \n",
-        "Below the `filepath` declaration in the following code cell, read in the filepath as a dataframe called `my_df` using the syntax shown directly above. "
+        "One line 1 below, we've defined the filepath for you. Insert a new line in the cell, and use the code provided above to create a dataframe named `my_df` that uses this filepath. Be sure to run the cell when you're done!"
       ]
     },
     {
@@ -191,7 +209,7 @@
       "source": [
         "filepath = \"https://raw.githubusercontent.com/valeriecarr/engr120/main/S21/state_pop.csv\""
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,11 +220,12 @@
       "source": [
         "## 5. Viewing Dataframes  \n",
         "### 5a. `head()` and `tail()`\n",
-        "Now that we've created the dataframe, we'll check to make sure it looks correct. Pandas has a method `head()` that displays the header and first few rows of a dataframe. The syntax goes like this:  \n",
-        "`df_name.head()`  \n",
+        "Now that we've created the dataframe, let's check to make sure it looks as we expect it to – data arranged in rows and columns. Pandas has a helpful method `head()` that displays the header (i.e., column names) and first few rows of a dataframe. The syntax for using this method is as follows:\n",
+        "\n",
+        "`my_df.head()`  \n",
         "\n",
         "<font color='red'>Exercise 3</font>  \n",
-        "Run the following cell to display the first few entries of the dataframe you created in the last exercise."
+        "Copy and paste the code from above into the cell below, and run the cell. You should now see the first few rows of the dataframe you created in Exercise 2."
       ]
     },
     {
@@ -226,12 +245,14 @@
         "id": "ufJDn2jFrve4"
       },
       "source": [
-        "By default, the `head()` method displays the first 5 entries. Providing a number in the parentheses will instead show a specific number of entries. For instance: `my_df.head(6)` would display 6 entries.  \n",
+        "By default, the `head()` method displays the first 5 rows of data. Providing a number in the parentheses will instead show a specific number of entries. For instance: `my_df.head(6)` would display 6 rows, rather than the default of 5 rows.  \n",
         "\n",
-        "Similaraly, you can use `tail()` to display the last few entries of a dataframe. The default for this method is also 5, and it can also be changed by providing a number in the parentheses.  \n",
+        "Similarly, you can use `tail()` to display the last few rows of a dataframe. The default for this method is also 5 with the option to specify a different number as desired. The syntax for this method is:\n",
+        "\n",
+        "`my_df.tail()`\n",
         "\n",
         "<font color='red'>Exercise 4</font>  \n",
-        "In the cell below, display the first 7 entries of the `my_df` dataframe."
+        "In the cell below, display the first 7 rows of `my_df`."
       ]
     },
     {
@@ -249,7 +270,7 @@
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 5</font>  \n",
-        "Now, create a new line and display the last 3 entries of the dataframe."
+        "Next, display the last 3 rows of the dataframe."
       ],
       "metadata": {
         "id": "CTaFKpnBEbtW"
@@ -269,7 +290,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "If you would like to see the *entire* dataframe, you can simply type its name. This works fine for small dataframes, but it's not helpful to spit out a huge dataframe in your notebook."
+        "If you would like to see the *entire* dataframe, you can simply type its name, in this case, `my_df`. This works fine for small dataframes like the one we're using in this tutorial, but it's typically not helpful to spit out a huge dataframe in your notebook. So, you may not use this command very often!"
       ],
       "metadata": {
         "id": "8YOOPnIXeVcI"
@@ -284,10 +305,12 @@
         "### 5b. Single Column  \n",
         "You can display a single column of a dataframe by using either the Attribute approach or the Label approach.\n",
         "\n",
-        "The syntax for the **Attribute approach** looks similar to calling a method on the dataframe, where the attribute is the column name:  \n",
+        "The syntax for the **Attribute approach** is as follows, with `col_name` being a generic stand-in for the column in which you're interested:\n",
+        "\n",
         "`my_df.col_name`   \n",
         "\n",
-        "The syntax for the **Label approach** looks much like accessing an element of an array or a dictionary item, where the label is the column name:  \n",
+        "The syntax for the **Label approach** is as follows. Importantly, note that when using this approach, you must put the column name in quotes:\n",
+        "\n",
         "`my_df['col_name']`  \n",
         "\n",
         "<font color='red'>Exercise 6</font>  \n",
