Added more content from Pandas Part 2 slides

--- a/Module8_pandas1.ipynb
+++ b/Module8_pandas1.ipynb
@@ -171,7 +171,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
       "source": [
         "filepath = \"https://raw.githubusercontent.com/valeriecarr/engr120/main/S21/state_pop.csv\""
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -345,6 +345,199 @@
       ],
       "metadata": {
         "id": "Pm0ENFyjhLPx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6. Subsetting Dataframes\n",
+        "Subsetting a dataframe allows you to view just a portion (a subset) of the dataframe. The section above shows a few ways to do this, but they don't allow you to specify which entries to display. The methods covered in this section let you take complete control over which entries to display.\n",
+        "\n",
+        "Generally speaking, dataframes are organized as follows:  \n",
+        "* each column is a variable (e.g., `totalPop`, `hispPop`)\n",
+        "* each row is an observation (e.g., data for a particular state)\n",
+        "\n",
+        "We can subset a dataframe according to variables (columns) or observations (rows).\n",
+        "\n",
+        "### 6a. Subsetting Observations\n",
+        "Subsetting observations is accomplished using Boolean expressions to select those that meet some criteria.  \n",
+        "\n",
+        "Say, for example, that we want to view data from all states with a total population greater than 15 million. We could accomplish this using the line of code below:  \n",
+        "\n",
+        "`my_df[my_df.totalPop > 15000000]`  \n",
+        "\n",
+        "The part within the square brackets is the Boolean expression that selects from the observations only those that meet the criteria.  \n",
+        "\n",
+        "<font color='red'>Exercise 8</font>  \n",
+        "Run the cell below to see this subsetting method in action."
+      ],
+      "metadata": {
+        "id": "DccpWhOgPwd4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df[my_df.totalPop > 15000000]"
+      ],
+      "metadata": {
+        "id": "pW4rm5omfi2s"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can use the same general syntax to find observations that meet any criteria we're interested in. You essentially just need to choose three things:  \n",
+        "\n",
+        "* the column you're interested in\n",
+        "* a Boolean operator (<, <=, >, >=, ==, !=)\n",
+        "* a value (a string or number)  \n",
+        "\n",
+        "All together, the general syntax looks like this:  \n",
+        ">`df_name[df_name.col_name == value]`  \n",
+        "\n",
+        "where `==` can be replaced with any comparison operator.  \n",
+        "\n",
+        "<font color='red'>Exercise 9</font>  \n",
+        "Subset the `my_df` dataframe to show data for only `'California'`."
+      ],
+      "metadata": {
+        "id": "EvCC2nrchLbj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Zh5mtKGMjx7U"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 10</font>  \n",
+        "Now display only the data for states with a Hispanic population less than or equal to 20 thousand."
+      ],
+      "metadata": {
+        "id": "rWOWCcGnjyee"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "M0SPMC8lkCdZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 6b. Multiple Criteria\n",
+        "We can also combine Boolean expressions to make complex criteria:\n",
+        "* data that meet criteria 1 *and* 2\n",
+        "* data that meet criteria 1 *or* 2  \n",
+        "\n",
+        "The syntax here is different than what you've already learned. Here, the And operator is `&` and the Or operator is `|` (the \"pipe\" symbol).  \n",
+        "\n",
+        "And: `my_df[(criteria1) & (criteria2)]`  \n",
+        "Or: `my_df[(criteria1) | (criteria2)]` \n",
+        "\n",
+        "Note: It is important to put parentheses around each criteria. The precedence of the `&` and `|` operators is greater than that of the comparison operators.\n",
+        "\n",
+        "<font color='red'>Exercise 11</font>  \n",
+        "Run the cell below to see the subset of states with a total population over 7 million and a Hispanic population over 1 million."
+      ],
+      "metadata": {
+        "id": "V5N4Vs7kkHam"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df[(my_df.totalPop > 7000000) & (my_df.hispPop > 1000000)]"
+      ],
+      "metadata": {
+        "id": "DkN3gUFTmopA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 12</font>  \n",
+        "Now write the code to display the states that have a total population less than 8 hundred thousand **or** a Hispanic population greater than 5 million."
+      ],
+      "metadata": {
+        "id": "Xx__BicqnzIm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "lROK3CsqnAHm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 6c. Combining Math and Boolean Expressions\n",
+        "With Pandas, it's very easy to perform mathematical operations on columns. We can add, subtract, multiply, and divide values from different columns. Then, we can compare the resulting value to some criteria with a Boolean expression.  \n",
+        "\n",
+        "For example, which states have a greater than 30% Hispanic population? First, we need to divide `hispPop` by `totalPop` and then assess which values are greater than 0.3. We can do all this with a single command!  \n",
+        "\n",
+        "<font color='red'>Exercise 13</font>  \n",
+        "Below is the line of code that answers the question. Run the cell to see the output."
+      ],
+      "metadata": {
+        "id": "86hD-cuyoayE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df[(my_df.hispPop / my_df.totalPop) > 0.3]"
+      ],
+      "metadata": {
+        "id": "lfrpqdoNpqi5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 14</font>  \n",
+        "Now display the states that have a population greater than 5 million, of which less than 10% is Hispanic."
+      ],
+      "metadata": {
+        "id": "_hk-B_skrGrG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df[(my_df.totalPop > 5000000) & ((my_df.hispPop / my_df.totalPop) < 0.05)]"
+      ],
+      "metadata": {
+        "id": "8fdAwncOrVR7"
       },
       "execution_count": null,
       "outputs": []
